kubernetes/apps/default/home-assistant/addons/matter-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant-matter-server
  labels: &labels
    app.kubernetes.io/name: home-assistant-matter-server
spec:
  strategy:
    type: Recreate
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - joey
      containers:
        - name: matter-server
          image: ghcr.io/matter-js/matterjs-server:1.4.0
          ports:
            - containerPort: 5580
              name: websocket
          resources:
            requests:
              cpu: 115m
              memory: 384Mi
            limits:
              memory: 384Mi
          volumeMounts:
            - mountPath: /run/dbus
              name: bluetooth
              readOnly: true
            - mountPath: /data
              name: data
      hostNetwork: true
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: bluetooth
          hostPath:
            path: /run/dbus
        - name: data
          persistentVolumeClaim:
            claimName: home-assistant-matter-server
    metadata:
      labels:
        <<: *labels
  selector:
    matchLabels:
      <<: *labels
