kubernetes/apps/default/home-assistant/addons/matter-server/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-matter-server
  labels:
    app.kubernetes.io/name: home-assistant-matter-server
spec:
  hostnames:
    - matter.internal.denniseffing.de
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: home-assistant-matter-server
          port: 5580
